<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="memoryName"
            type="String" />

        <variable
            name="locationName"
            type="String" />

        <variable
            name="memoryDate"
            type="String" />

        <variable
            name="memoryType"
            type="String" />

        <variable
            name="memoryMood"
            type="String" />

        <variable
            name="memoryNotes"
            type="String" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="16dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_back"
                style="@style/Widget.Material3.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/go_back"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topMargin"
                app:layout_constraintStart_toStartOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/btn_back"
                app:val_name="@{memoryName}"
                tools:text="Place name" />

            <TextView
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/memory_title"
                app:layout_constraintBottom_toBottomOf="@id/tv_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_name" />

            <TextView
                android:id="@+id/tv_location"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topMargin"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_name"
                app:val_location="@{locationName}"
                tools:text="Place location" />

            <TextView
                style="@style/TextAppearance.Material3.TitleMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/memory_location"
                app:layout_constraintBottom_toBottomOf="@id/tv_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_location" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topMargin"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_location"
                app:val_date="@{memoryDate}"
                tools:text="Date of travel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_lower"
                style="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintTop_toTopOf="@id/tv_date"
                app:layout_constraintBottom_toBottomOf="@id/tv_date"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/tv_type"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topMargin"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_date"
                app:val_type="@{memoryType}"
                tools:text="Type of travel" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_of_travel"
                style="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintTop_toTopOf="@id/tv_type"
                app:layout_constraintBottom_toBottomOf="@id/tv_type"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/tv_mood"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topMargin"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_type"
                app:val_mood="@{memoryMood}"
                tools:text="Mood" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mood"
                style="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintTop_toTopOf="@id/tv_mood"
                app:layout_constraintBottom_toBottomOf="@id/tv_mood"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>

            <TextView
                android:id="@+id/tv_notes"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/topMargin"
                android:singleLine="false"
                app:layout_constraintStart_toStartOf="@id/tv_name"
                app:layout_constraintTop_toBottomOf="@id/tv_mood"
                app:val_notes="@{memoryNotes}"
                tools:text="Notes" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/memory_notes"
                style="@style/TextAppearance.Material3.TitleMedium"
                app:layout_constraintTop_toTopOf="@id/tv_notes"
                app:layout_constraintBottom_toBottomOf="@id/tv_notes"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>